feat: refactor Math.clamp to use Math.max / min